# digikam-analogexif

./: AnalogExif.ael  AnalogExif.db  AnalogExif.icns  AnalogExif.nsi  AnalogExif.pro  AnalogExif.rc  AnalogExif.rdf  AnalogExif.sln  AnalogExif.vcproj  AnalogExif.vcproj.vspscc  CHANGES  CMakeLists.txt  NewDb.ael  README.md  TODO  VERSION  aboutdialog.h  aboutdialog.ui  aboutdialog_mac.ui  analogexif.cpp  analogexif.db  analogexif.h  analogexif.qrc  analogexif.sql  analogexif.ui  analogexif_mac.ui  analogexifoptions.cpp  analogexifoptions.h  analogexifoptions.ui  asciistringdialog.cpp  asciistringdialog.h  asciistringdialog.ui  asciitextdialog.cpp  asciitextdialog.h  asciitextdialog.ui  autofillexpnum.cpp  autofillexpnum.h  autofillexpnum.ui  bootstrap.sh  checkedgeartreeview.h  (+54 more)
analogexif/: AnalogExif.ael  aboutdialog.cpp  analogexif.ui  analogexifoptions.h  asciitextdialog.h  dirsortfilterproxymodel.cpp  gearlistview.h  geartreemodel.cpp  optgeartemplateview.h  progressdialog.h  progressdialog.ui  tagnameeditdialog.ui  tagselectvalsitemdelegate.cpp
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  analogexif.cpp  analogexif.h  analogexif.qrc  analogexifgenericplugin.cpp  analogexifgenericplugin.h  analogexifoptions.cpp  analogexifoptions.h  analogexifoptions.ui  asciistringdialog.cpp  asciistringdialog.h  asciistringdialog_mac.ui  asciitextdialog.cpp  asciitextdialog.h  autofillexpnum.cpp  autofillexpnum.h  autofillexpnum.ui  checkedgeartreeview.h  copymetadatadialog.cpp  copymetadatadialog.h  current-version.xml  dirsortfilterproxymodel.cpp  dirsortfilterproxymodel.h  editgear.cpp  editgear.h  editgeartagsmodel.cpp  editgeartagsmodel.h  editgeartreemodel.cpp  editgeartreemodel.h  edittagselectvalues.cpp  edittagselectvalues.h  edittagselectvalues.ui  emptyspinbox.h  exifitem.cpp  exifitem.h  exifitemdelegate.cpp  exifitemdelegate.h  (+34 more)
src/attic/: AnalogExif.rdf  aboutdialog_mac.ui  analogexif.sql  analogexif_mac.ui  asciistringdialog_mac.ui  current-version.xml  editgear_mac.ui  main.cpp  ns  onlineversionchecker.cpp  onlineversionchecker.h
src/res/: AnalogExif.rdf  not-supported.txt
src/ui/: analogexif.ui  analogexif_mac.ui  analogexifoptions.ui  asciistringdialog.ui  asciistringdialog_mac.ui  asciitextdialog.ui  asciitextdialog_mac.ui  autofillexpnum.ui  copymetadatadialog.ui  editgear.ui  editgear_mac.ui  edittagselectvalues.ui  multitagvaluesdialog.ui  progressdialog.ui  tagnameeditdialog.ui
